@@ -232,6 +232,7 @@ let build_package_cmx members cmxfile =
       ui_force_link =
           List.exists (fun info -> info.ui_force_link) units;
       ui_export_info;
+      ui_for_pack = None;
     } in
   Compilenv.write_unit_info pkg_infos cmxfile
 
