@@ -1,3 +1,0 @@
-let () =
-  Api.reg_mod "Packed1_client";
-  print_endline Packed1.mykey
